--- a/sources/data/resource-types.yaml
+++ b/sources/data/resource-types.yaml
@@ -1,4 +1,4 @@
-# Resource Types: This is an ordered list!
+# Resource Types: This is an ordered list - most important first
 ---
 - Introductory investigation
 - Introductory problem
